# holdem_poc

./: .gitignore  CLAUDE.md  THREAD_HANDOFF.md  run_mac.sh
HoldemPOC/: Package.swift  README.md
HoldemPOC/Sources/CPokerCore/: shim.c
HoldemPOC/Sources/CPokerCore/include/: poker_core.h
HoldemPOC/Sources/HoldemPOCApp/: ContentView.swift  HoldemPOCApp.swift  PokerCore.swift  SessionHistory.swift
poker_core/: Cargo.toml  test_wasm.html
poker_core/pkg_bundler/: package.json  poker_core.d.ts  poker_core.js  poker_core_bg.js  poker_core_bg.wasm  poker_core_bg.wasm.d.ts
poker_core/src/: lib.rs
reports/: latest_session_analysis.md  session_01C6DA45-5956-4B7D-B972-3CFB0A658358_analysis.md  session_68592037-A909-4E1A-89EA-40DAB796004C_analysis.md
scripts/: check_layout_snapshots.py  check_report_fixtures.py  generate_ai_session_report.py  generate_latest_session_report.py  pre_release_check.sh  render_layout_snapshots.sh
tests/fixtures/layout_snapshots/: regions.json
tests/fixtures/report_cases/: equivalent_near_opt.expected.md  equivalent_near_opt.jsonl  major_leak_overbet_bust.expected.md  major_leak_overbet_bust.jsonl  schema_migration.expected.md  schema_migration.jsonl  unclear_topline_postflop.expected.md  unclear_topline_postflop.jsonl
web/: index.html  package-lock.json  package.json
web/src/: App.css  App.tsx  chenFormula.ts  evUtils.ts  game.ts  index.css  types.ts
web/src/components/: ActionPanel.tsx  Board.tsx  Card.tsx  HandRankingsModal.tsx  HandResult.tsx  LogStrip.tsx  PlayerSeat.tsx  ReviewPanel.tsx  SessionActionPanel.tsx
(+1 files in other folders)
